# petrock-ingest

./: .env.template  .gitignore  Cargo.toml  LICENSE  README.md
migrations/: 20221015125726_initial.sql
src/: main.rs
